--- a/todo/src/components/input-form/input-form.component.html
+++ b/todo/src/components/input-form/input-form.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="todoItem" (submit)="addTodoItem();">
-    <input
-        type="text"
-        formControlName="desc"
+<form [formGroup]="todoItem" (submit)="addTodoItem()">
+    <input 
+        type="text" 
+        formControlName="desc" 
         placeholder="What needs to be done?"
     />
     <button type="submit">ADD</button>
