Add API 호출까지 완료

--- a/github-search/src/components/global-nav/global-nav.component.html
+++ b/github-search/src/components/global-nav/global-nav.component.html
@@ -1,7 +1,13 @@
 <nav>
-    <ul>
-        <!-- TODO: Manually, Automatically 리스트 클릭에 라우팅 이벤트 추가 -->
-        <a><li>Manually</li></a>
-        <a><li>Automatically</li></a>
-    </ul>
+  <ul>
+    <!-- TODO: Manually, Automatically 리스트 클릭에 라우팅 이벤트 추가 -->
+    <li>
+      <a routerLink="/manually-search" routerLinkActive="active">Manually</a>
+    </li>
+    <li>
+      <a routerLink="/automatically-search" routerLinkActive="active"
+        >Automatically</a
+      >
+    </li>
+  </ul>
 </nav>
